update isi-piring, home dan quiz

--- a/home.html
+++ b/home.html
@@ -261,7 +261,7 @@
 
                     <!-- 1. Tips Makanan Sehat -->
                     <div class="col-6 col-md-3">
-                        <a href="https://www.alodokter.com/bunda-ini-penyebab-dan-tips-menghadapi-anak-picky-eater"
+                        <a href="https://www.halodoc.com/artikel/5-tips-yang-bisa-dilakukan-agar-anak-makan-lahap?srsltid=AfmBOoqZwy2kowimGcbvjvKyKu6yMPoM1LEinga7qqmMHvzWN0R7f1Mi"
                             target="_blank" class="card h-100 text-decoration-none shadow-sm border-success">
                             <div class="card-body text-center">
                                 <img src="img/makan-sehat.png" class="img-fluid mb-2" style="height: 60px;">
