isi piring usia 12-23 bulan + img

--- a/isi-piring.html
+++ b/isi-piring.html
@@ -336,12 +336,12 @@
         const dailyFoodItems = {
             "Protein": {
                 "12-24": [
-                    { img: "img/chicken.png", alt: "Ayam", text: "Ayam 60 gr<br>(6 sdm)" },
-                    { img: "img/chicken-liver.png", alt: "Hati Ayam", text: "Hati Ayam 55 gr<br>(5.5 sdm)" },
-                    { img: "img/fish.png", alt: "Ikan", text: "Ikan 60 gr<br>(6 sdm)" },
-                    { img: "img/beef.png", alt: "Daging Sapi", text: "Daging Sapi 50 gr<br>(5 sdm)" },
-                    { img: "img/egg.png", alt: "Telur", text: "Telur 60 gr<br>(1 butir besar)" },
-                    { img: "img/milk.png", alt: "Susu", text: "Susu 180-240 ml<br>(1–2 gelas)" }
+                    { img: "img/dada-ayam.png", alt: "Ayam", text: "Ayam 60 gr<br>(6 sdm)" },
+                    { img: "img/hati-ayam.png", alt: "Hati Ayam", text: "Hati Ayam 55 gr<br>(5.5 sdm)" },
+                    { img: "img/ikan.png", alt: "Ikan", text: "Ikan 60 gr<br>(6 sdm)" },
+                    { img: "img/daging.png", alt: "Daging Sapi", text: "Daging Sapi 50 gr<br>(5 sdm)" },
+                    { img: "img/telur.png", alt: "Telur", text: "Telur 60 gr<br>(1 butir besar)" },
+                    { img: "img/susu.png", alt: "Susu", text: "Susu 180-240 ml<br>(1–2 gelas)" }
                 ],
                 "2-5": [
                     { img: "img/chicken.png", alt: "Ayam", text: "Ayam 80 gr<br>(8 sdm.)" },
@@ -354,11 +354,11 @@
             },
             "Karbohidrat": {
                 "12-24": [
-                    { img: "img/rice.png", alt: "Nasi", text: "Nasi 60 gr<br>(3–4 sdm penuh)" },
-                    { img: "img/corn.png", alt: "Jagung", text: "Jagung 1/2<br>gelas kecil" },
-                    { img: "img/bread.png", alt: "Roti Tawar", text: "Roti Tawar<br>1 lembar" },
-                    { img: "img/sweet-potato.png", alt: "Ubi Jalar", text: "Ubi Jalar 66 gr<br>(4–5 sdm)" },
-                    { img: "img/potato.png", alt: "Kentang", text: "Kentang 1<br>buah kecil" }
+                    { img: "img/nasi.png", alt: "Nasi", text: "Nasi 60 gr<br>(3–4 sdm penuh)" },
+                    { img: "img/jagung.png", alt: "Jagung", text: "Jagung 1/2<br>gelas kecil" },
+                    { img: "img/roti.png", alt: "Roti Tawar", text: "Roti Tawar<br>1 lembar" },
+                    { img: "img/ubi.png", alt: "Ubi Jalar", text: "Ubi Jalar 66 gr<br>(4–5 sdm)" },
+                    { img: "img/kentang.png", alt: "Kentang", text: "Kentang 1<br>buah kecil" }
                 ],
                 "2-5": [
                     { img: "img/rice.png", alt: "Nasi", text: "Nasi 120 gr<br>(5–6 sdm penuh)" },
@@ -369,10 +369,10 @@
             },
             "Lemak": {
                 "12-24": [
-                    { img: "img/cheese.png", alt: "Keju", text: "Keju 1 sdm perhari" },
-                    { img: "img/margarine.png", alt: "Margarin", text: "Margarin 1 sdt" },
-                    { img: "img/oil.png", alt: "Minyak", text: "Minyak 1 sdm" },
-                    { img: "img/yogurt.png", alt: "Yogurt", text: "Yogurt 1/2 cup kecil" }
+                    { img: "img/keju.png", alt: "Keju", text: "Keju 1 sdm perhari" },
+                    { img: "img/margarin.png", alt: "Margarin", text: "Margarin 1 sdt" },
+                    { img: "img/minyak.png", alt: "Minyak", text: "Minyak 1 sdm" },
+                    { img: "img/yoghurt.png", alt: "Yogurt", text: "Yogurt 1/2 cup kecil" }
                 ],
                 "2-5": [
                     { img: "img/oil.png", alt: "Minyak", text: "Minyak 3 sdm<br>(Per hari)" },
@@ -382,12 +382,12 @@
             },
             "Serat": {
                 "12-24": [
-                    { img: "img/banana.png", alt: "Pisang", text: "Pisang 1<br>porsi perhari" },
-                    { img: "img/papaya.png", alt: "Pepaya", text: "Pepaya 1<br>potong kecil" },
-                    { img: "img/apple.png", alt: "Apel", text: "Apel 1/2<br>di potong kecil-kecil" },
-                    { img: "img/carrot.png", alt: "Wortel", text: "Wortel 2-3 sdm" },
-                    { img: "img/broccoli.png", alt: "Brokoli", text: "Brokoli 1-2<br>kuntum kecil" },
-                    { img: "img/spinach.png", alt: "Bayam", text: "Bayam 1<br>mangkuk kecil" }
+                    { img: "img/pisang.png", alt: "Pisang", text: "Pisang 1<br>porsi perhari" },
+                    { img: "img/pepaya.png", alt: "Pepaya", text: "Pepaya 1<br>potong kecil" },
+                    { img: "img/apel.png", alt: "Apel", text: "Apel 1/2<br>di potong kecil-kecil" },
+                    { img: "img/wortel.png", alt: "Wortel", text: "Wortel 2-3 sdm" },
+                    { img: "img/brokoli.png", alt: "Brokoli", text: "Brokoli 1-2<br>kuntum kecil" },
+                    { img: "img/bayam.png", alt: "Bayam", text: "Bayam 1<br>mangkuk kecil" }
                 ],
                 "2-5": [
                     { img: "img/orange.png", alt: "Jeruk", text: "Jeruk 1<br>buah sedang" },
@@ -398,7 +398,7 @@
             },
             "Cair": {
                 "12-24": [
-                    { img: "img/water-glass.png", alt: "Air Minum", text: "240 - 960 ml<br>(setara 1–4 gelas)" }
+                    { img: "img/air.png", alt: "Air Minum", text: "240 - 960 ml<br>(setara 1–4 gelas)" }
                 ],
                 "2-5": [
                     { img: "img/water-bottle.png", alt: "Air Minum", text: "1000–1200 ml<br>(setara 5–6 gelas)" }
@@ -418,6 +418,10 @@
 
                 let htmlContent = '';
 
+                // Terapkan justify-content-center pada rowElement
+                // Ini adalah perubahan utama
+                rowElement.classList.add('justify-content-center');
+
                 // Jika usia dipilih, render item yang sesuai
                 if (ageKey !== "default" && itemsData.length > 0) {
 
@@ -426,21 +430,23 @@
                     if (header === "Lemak") {
                         colClass = 'col-6 col-md-4 col-lg-3';
                     } else if (header === "Cair") {
+                        // Untuk Cair sudah ada justify-content-center di HTML
+                        // Tapi kita pastikan lagi, dan ini tidak mengganggu
                         colClass = 'col-8 col-md-6 col-lg-4';
                     }
 
                     htmlContent = itemsData.map(item => `
-                    <div class="${colClass} food-item">
-                        <img src="${item.img}" alt="${item.alt}">
-                        <p>${item.text}</p>
-                    </div>
-                `).join('');
+                <div class="${colClass} food-item">
+                    <img src="${item.img}" alt="${item.alt}">
+                    <p>${item.text}</p>
+                </div>
+            `).join('');
                 }
 
                 // Ganti konten row
                 rowElement.innerHTML = htmlContent;
 
-                // Tampilkan row jika ada konten, sembunyikan jika tidak (meski harusnya selalu ada jika ageKey != default)
+                // Tampilkan/sembunyikan row
                 if (ageKey === "default") {
                     rowElement.classList.add('d-none');
                 } else {
